erDiagram
    EXPENSE_TAGS {
        string id PK
        string name
        integer created_at
        integer updated_at
        string created_by
        string updated_by
        boolean is_disabled
    }

    EXPENSE_MODES {
        string id PK
        string name
        integer created_at
        integer updated_at
        string created_by
        string updated_by
        boolean is_disabled
    }

    EXPENSE_FYNIX {
        string id PK
        string name
        integer created_at
        integer updated_at
        string created_by
        string updated_by
        boolean is_disabled
    }

    EXPENSE_TRACKER {
        string id PK
        string user_id
        string expense_period
        real amount
        string description
        string item_details
        string tag_id FK
        string mode_id FK
        string fynix_id FK
        string status
        integer created_at
        integer updated_at
        string created_by
        string updated_by
        boolean is_disabled
    }

    EXPENSE_TRACKER ||--o{ EXPENSE_TAGS : has_tag
    EXPENSE_TRACKER ||--o{ EXPENSE_MODES : has_mode
    EXPENSE_TRACKER ||--o{ EXPENSE_FYNIX : has_fynix